# openad-plugin-demo

./: .gitignore  README.md  pyproject.toml
openad_plugin_demo/: main.py  plugin_description.txt  plugin_grammar_def.py  plugin_metadata.json  plugin_metadata.yaml  plugin_params.py
openad_plugin_demo/commands/generate_random_properties/: command.py  description.txt  plugin.py
openad_plugin_demo/commands/hello_advanced/: command.py  description.txt  description_fr.txt  hello_advanced.py
openad_plugin_demo/commands/hello_world/: ascii_art.py  command.py  description.txt  description_fr.txt
openad_plugin_demo/commands/localize_help/: command.py  description.py  description.txt  description_fr.txt  description_fr_BE.txt
openad_plugin_demo/commands/output_styles/: command.py  description.txt
openad_plugin_demo/commands/pyparsing/: command.py  description.py  output.py
openad_plugin_demo/commands/validate_molecules/: command.py  description.py  description_list.txt  description_single.txt
openad_plugin_demo/commands/visualize_molecules/: command.py  description.py  description.txt  visualize_molecules.py
